--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -26,7 +26,7 @@
                                 <span th:utext="${imprintDTO.address.street}">street</span>&nbsp;
                                 <span th:utext="${imprintDTO.address.houseNo}">house no</span><br>
                                 <span th:if="${imprintDTO.address.co != null}">
-                                    <span th:utext="#{imprint_address_co}">c/o</span>&nbsp;<span
+                                    <span th:utext="#{address_co}">c/o</span>&nbsp;<span
                                         th:utext="${imprintDTO.address.co}">co name</span><br>
                                 </span>
                                 <span th:utext="${imprintDTO.address.postalCode}">postal code</span>&nbsp;
@@ -60,7 +60,7 @@
                                 <span th:utext="${imprintDTO.insurance.address.street}">street</span>&nbsp;
                                 <span th:utext="${imprintDTO.insurance.address.houseNo}">house no</span><br>
                                 <span th:if="${imprintDTO.insurance.address.co != null}">
-                                    <span th:utext="#{imprint_address_co}">c/o</span>&nbsp;<span
+                                    <span th:utext="#{address_co}">c/o</span>&nbsp;<span
                                         th:utext="${imprintDTO.insurance.address.co}">co name</span><br>
                                 </span>
                                 <span th:utext="${imprintDTO.insurance.address.postalCode}">postal code</span>&nbsp;
