Added contact-form and form handling

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,11 +3,13 @@
 <fragment th:fragment="head" th:remove="tag">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/cookieConsent.css" rel="stylesheet">
+    <link href="css/popup.css" rel="stylesheet">
 
     <!-- iOS -->
     <link href="images/favicon/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
