--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7163,3 +7163,9 @@ a.credit {
 .section {
     padding-bottom: 0;
 }
+
+.alert .alert-content {
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
