--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -52,6 +52,18 @@
             <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
                 <div class="container">
                     <div class="navbar-translate"><a class="navbar-brand" href="/" rel="tooltip">Home</a></div>
+                    <div class="navbar-translate">
+                        <button aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"
+                                class="navbar-toggler navbar-toggler"
+                                data-target="#navigation" data-toggle="collapse" type="button"><span
+                                class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span
+                                class="navbar-toggler-bar bar3"></span></button>
+                    </div>
+                    <div class="collapse navbar-collapse justify-content-end" id="navigation">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a id="lang-toggle" class="nav-link smooth-scroll" th:href="${toggleLanguage.toggleValue}" th:utext="${toggleLanguage.localizedName}">Language</a></li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
