--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -94,6 +94,7 @@
         </div>
     </div>
 </div>
+<script th:replace="fragments/scripts :: scripts"></script>
 <script>
     window.addEventListener('load', function () {
         document.getElementById('insert_1').innerText = xor(atob("[[${imprintDTO.phone}]]"), atob("[[${imprintKey}]]"));
