add error handling

--- a/src/main/resources/templates/gdpr.html
+++ b/src/main/resources/templates/gdpr.html
@@ -278,5 +278,6 @@
         </div>
     </div>
 </div>
+<div th:replace="fragments/footer :: footer"></div>
 <script th:replace="fragments/scripts :: scripts"></script>
 </body>
