--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -94,6 +94,7 @@
         </div>
     </div>
 </div>
+<div th:replace="fragments/footer :: footer"></div>
 <script th:replace="fragments/scripts :: scripts"></script>
 <script>
     window.addEventListener('load', function () {
