add profile download

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
                             data-aos-anchor="data-aos-anchor" href=""
                             th:href="'#' + ${cvWebsiteDTO.contact.target.id}" th:utext="#{hire_me}">Hire Me</a>
                         <a class="btn btn-primary" data-aos="zoom-in" data-aos-anchor="data-aos-anchor"
-                           href="pdfDownload"
+                           href="/profile"
                            target="_blank" th:utext="#{request_cv}">Request CV</a>
                     </div>
                 </div>
