--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="container">
                     <div class="content-center">
-                        <div class="h2 title" th:utext="${title}"></div>
+                        <h2 class="h2 title" th:utext="${title}"></h2>
                     </div>
                 </div>
             </div>
