remove phone number detection

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <meta content="" property="og:url" th:content="${cvWebsiteDTO.meta.openGraph.url}">
     <meta content="" property="og:type" th:content="${cvWebsiteDTO.meta.openGraph.type}">
     <meta content="" property="og:title" th:content="${cvWebsiteDTO.meta.openGraph.title}">
+    <meta content="telephone=no" name="format-detection">
     <title th:content="${cvWebsiteDTO.meta.title}">Title</title>
     <script th:replace="fragments/head :: head"></script>
 </head>
