combine source js/css files to single file and use it instead of multiple resources;

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,5 +9,7 @@
                th:utext="#{privacy_and_cookies_link_text}">Privacy and cookies</a>
         </div>
     </footer>
+    <script src="js/all.js" type="application/javascript"></script>
+    <script th:replace="fragments/cookieConsent :: cookieConsent"></script>
 </fragment>
 </html>
