--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,12 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-    <link href="css/cookieConsent.css" rel="stylesheet">
-    <link href="css/popup.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
 
     <!-- iOS -->
     <link href="images/favicon/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
@@ -41,9 +36,6 @@
             }
         </style>
     </noscript>
-    <script src="js/cookieConsentMain.js"></script>
-    <script th:replace="fragments/cookieConsent :: cookieConsent"></script>
-    <script src="js/cookieConsent.js"></script>
 </fragment>
 
 <fragment th:fragment="simpleHeader" th:remove="tag">
