--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <meta content="" property="og:type" th:content="${cvWebsiteDTO.meta.openGraph.type}">
     <meta content="" property="og:title" th:content="${cvWebsiteDTO.meta.openGraph.title}">
     <meta content="telephone=no" name="format-detection">
-    <title th:content="${cvWebsiteDTO.meta.title}">Title</title>
+    <title th:utext="${cvWebsiteDTO.meta.title}">Title</title>
     <script th:replace="fragments/head :: head"></script>
 </head>
 
@@ -117,7 +117,6 @@
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
-<script th:replace="fragments/scripts :: scripts"></script>
 </body>
 
 </html>
